@startuml

title __TPMEDIA's Class Diagram__\n

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class Author {
          - firstName : String
          - lastName : String
          + Author()
          + Author()
          + getFirstName()
          + setFirstName()
          + getLastName()
          + setLastName()
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class Book {
          - nbPage : int
          + getNbPage()
          + setNbPage()
          + Book()
          + Book()
          + getNetPrice()
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class Cart {
          - cartRowList : List<CartRow>
          + Cart()
          + getTotalNetPrice()
          + add()
          + remove()
          + getCartRowList()
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class CartRow {
          - quantity : int
          + CartRow()
          + increment()
          + decrement()
          + getRowNetPrice()
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class Cd {
          - nbTrack : int
          + getNbTrack()
          + setNbTrack()
          + Cd()
          + getNetPrice()
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class Dvd {
          - zone : int
          + getZone()
          + setZone()
          + Dvd()
          + getNetPrice()
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class Main {
          {static} + main()
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      abstract class Media {
          - id : int
          - title : String
          - price : double
          - authorList : List<Author>
          + Media()
          + Media()
          + getId()
          + setId()
          + getTitle()
          + setTitle()
          + getPrice()
          + setPrice()
          + toString()
          + getPublisher()
          + getAuthorList()
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class Publisher {
          - id : int
          - name : String
          + Publisher()
          + Publisher()
          + getId()
          + setId()
          + getName()
          + setName()
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      interface iMedia {
          {abstract} + getNetPrice()
          {abstract} + getId()
          {abstract} + setId()
          {abstract} + getTitle()
          {abstract} + setTitle()
          {abstract} + getPrice()
          {abstract} + setPrice()
          {abstract} + toString()
          {abstract} + getPublisher()
          {abstract} + getAuthorList()
      }
    }
  }
  

  Book -up-|> Media
  Cd -up-|> Media
  Dvd -up-|> Media
  Media -up-|> iMedia
  Media "*" o-- "1" Publisher : publisher
  Media "*" o-- "*" Author : authorList
  Cart o--> "*" CartRow : cartRowList
  CartRow o--> "1" iMedia : media

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
